--- a/src/app/modules/shared/components/mt-header/mt-header.component.scss
+++ b/src/app/modules/shared/components/mt-header/mt-header.component.scss
@@ -56,7 +56,7 @@ mat-toolbar {
       transition: $transition-duration;
 
       &:not(.active):not(:hover) {
-        color: map.get(palettes.$grey, 40);
+        color: map.get(palettes.$grey, 50);
       }
 
       &.active {
